<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="392dp"
        android:layout_height="235dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rowCharactersLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent">

            <TextView
                android:id="@+id/rowCharactersTextViewGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="60dp"
                android:text="@string/character_gender"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rowCharactersTextViewMP" />

            <TextView
                android:id="@+id/rowCharactersTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="32dp"
                android:text="@string/character_id"
                app:layout_constraintEnd_toStartOf="@+id/rowCharactersTextViewName"
                app:layout_constraintHorizontal_bias="0.157"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rowCharactersTextViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="52dp"
                android:text="@string/character_name"
                app:layout_constraintEnd_toStartOf="@+id/rowCharactersTextViewHP"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rowCharactersTextViewRace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="44dp"
                android:text="@string/character_race"
                app:layout_constraintEnd_toStartOf="@+id/rowCharactersTextViewAge"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rowCharactersTextViewId" />

            <TextView
                android:id="@+id/rowCharactersTextViewAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="44dp"
                android:text="@string/character_age"
                app:layout_constraintEnd_toStartOf="@+id/rowCharactersTextViewHeight"
                app:layout_constraintTop_toBottomOf="@+id/rowCharactersTextViewName" />

            <TextView
                android:id="@+id/rowCharactersTextViewPrimaryWeapon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:text="@string/character_primary_weapon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/rowCharactersTextViewSecondaryWeapon"
                app:layout_constraintHorizontal_bias="0.462"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rowCharactersTextViewRace"
                app:layout_constraintVertical_bias="0.327" />

            <TextView
                android:id="@+id/rowCharactersTextViewHP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="72dp"
                android:text="@string/character_hp"
                app:layout_constraintEnd_toStartOf="@+id/rowCharactersTextViewMP"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rowCharactersTextViewMP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="72dp"
                android:text="@string/character_mp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rowCharactersTextViewHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="48dp"
                android:text="@string/character_height"
                app:layout_constraintEnd_toStartOf="@+id/rowCharactersTextViewGender"
                app:layout_constraintTop_toBottomOf="@+id/rowCharactersTextViewHP" />

            <TextView
                android:id="@+id/rowCharactersTextViewSecondaryWeapon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:text="@string/character_secondary_weapon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rowCharactersTextViewGender"
                app:layout_constraintVertical_bias="0.617" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>